[gd_scene load_steps=7 format=3 uid="uid://c24qcl43suyqx"]

[ext_resource type="Script" uid="uid://ctb4qvc4tm46d" path="res://Abilities/BossMoves/LuminousEye/PhotonLaser.gd" id="1_n0p1d"]
[ext_resource type="Script" uid="uid://c48e7iupn8dsg" path="res://Abilities/BossMoves/LuminousEye/LaserRayCast.gd" id="2_pnwxr"]
[ext_resource type="Texture2D" uid="uid://7adyhp5aos0f" path="res://Resources/abilities/enemy/photon-laser-particle.png" id="3_5n6q6"]

[sub_resource type="Animation" id="Animation_16udp"]
resource_name = "LaserAttack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserDamageTexture:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [4.0, 32.0, 24.0, 32.0, 4.0]
}

[sub_resource type="Animation" id="Animation_m511y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserDamageTexture:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [32.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kuyb"]
_data = {
&"LaserAttack": SubResource("Animation_16udp"),
&"RESET": SubResource("Animation_m511y")
}

[node name="PhotonLaser" type="Node2D"]
script = ExtResource("1_n0p1d")

[node name="LaserRayCast" type="RayCast2D" parent="."]
enabled = false
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("2_pnwxr")

[node name="LaserDamageTexture" type="Line2D" parent="."]
width = 32.0
texture = ExtResource("3_5n6q6")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LaserIndicator" type="Line2D" parent="."]
width = 1.0
default_color = Color(1, 0, 0, 0.556863)
begin_cap_mode = 2

[node name="LaserTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0kuyb")
}

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
